[package]
name = "tTFL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tui = "0.18"
crossterm = "0.23"
unicode-width = "0.1.4"
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.19"